✨ Question no longer close on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -99,6 +99,10 @@ p {
   .grid {
     grid-template-columns: auto auto auto;
   }
+
+  #myUL {
+    display: block;
+  }
 }
 
 @media (prefers-color-scheme: light) {}
